--- a/Week4/index.html
+++ b/Week4/index.html
@@ -158,7 +158,7 @@
                 </article>
             </div>
         </section>
-    </main
+    </main>
 
     <footer class="site-footer">
         <!-- TODO: ปรับข้อความ footer ตามที่กลุ่มต้องการ -->
